[package]
name = "ragent"
version = "5.0.8"
authors = ["alex <alex@pdp7.net>"]
description = "A Rust minimal monitoring agent"
license = "Public Domain"
edition = "2021"
publish = false

[dependencies]
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
serde_json = { version = "1.0.138", default-features = false }
serde = { version = "1.0.218", default-features = false }
serde_derive = { version = "1.0.167", default-features = false }
hyper = { version = "0.14.28", features = ["server", "http1", "runtime"], default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"], default-features = false }
reqwest = { version = "0.12.11", features = ["blocking", "json"], default-features = false }
clap = { version = "4.5.30", features = ["derive", "std"], default-features = false }
nagios-range = "0.2.5"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
check_ragent = { path = "/usr/bin/check_ragent" }
ragent = { path = "/usr/bin/ragent" }

[package.metadata.rpm.files]
"ragent.service" = { path = "/usr/lib/systemd/system/ragent.service" }

[package.metadata.deb]
assets = [
    ["debian-assets/ragent.service", "lib/systemd/system/", "644"],
    ["target/release/check_ragent", "usr/bin/", "755"],
    ["target/release/ragent", "usr/bin/", "755"],
]
maintainer-scripts = "debian-maintainer-scripts"
