[package]
name = "ragent"
version = "6.0.1"
authors = ["alex <alex@pdp7.net>"]
description = "A Rust minimal monitoring agent"
license = "Public Domain"
edition = "2021"
publish = false

[dependencies]
nix = { version = "0.30.1", default-features = false, features = [ "fs" ] }
serde_json = { version = "1.0.141", default-features = false, features = [ "std" ] }
serde = { version = "1.0.219", default-features = false }
serde_derive = { version = "1.0.219", default-features = false }
hyper = { version = "1.6.0", default-features = false, features = [ "server" ] }
tokio = { version = "1.47.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
reqwest = { version = "0.12.22", default-features = false, features = [ "blocking", "json" ] }
clap = { version = "4.5.42", default-features = false, features = [ "std", "derive" ] }
nagios-range = { version = "0.2.5", default-features = false }
hyper-util = { version = "0.1.16", default-features = false }
bytes = { version = "1.10.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
check_ragent = { path = "/usr/bin/check_ragent" }
ragent = { path = "/usr/bin/ragent" }

[package.metadata.rpm.files]
"ragent.service" = { path = "/usr/lib/systemd/system/ragent.service" }

[package.metadata.deb]
assets = [
    ["debian-assets/ragent.service", "lib/systemd/system/", "644"],
    ["target/release/check_ragent", "usr/bin/", "755"],
    ["target/release/ragent", "usr/bin/", "755"],
]
maintainer-scripts = "debian-maintainer-scripts"
